--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dhtmlx-scheduler": "^6.0.3",
     "dotenv": "^16.0.3",
     "fullcalendar": "^6.1.7",
+    "gh-pages": "^5.0.0",
     "moment": "^2.29.4",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
